# mcp_test

./: .gitignore  README.md  main.py  pyproject.toml  test_web_search.py
core/: authentication.py  config.py  logger.py  scopes.py  server.py  session.py
tools/: base.py  base_tool.py  calculator_tool.py  current_time_tool.py  web_search_tool.py
