[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "fastmcp>=3.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.5",
    "mcp[cli]>=1.26.0",
    "pyproject>=1!0.1.2",
    "sqlalchemy>=2.0.47",
    "stytch>=14.2.0",
]
